load open street map

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -8,4 +8,4 @@ block content
                     #tiledMap
             .uk-width-1-2
                 .uk-card.uk-card-default.uk-card-body
-                    h3.uk-card-title Camera Map
+                    h3.uk-card-title Street View
