update street view identification and add camera highlight style on osm

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -7,5 +7,6 @@ block content
                 .uk-card.uk-card-default
                     #tiledMap
             .uk-width-1-2
-                .uk-card.uk-card-default.uk-card-body
-                    h3.uk-card-title Street View
+                .uk-card.uk-card-default.uk-card-body.uk-padding-small
+                    h3.uk-card-title.uk-margin-small-bottom Street View
+                    #streetView
