--- a/web/templates/street-view-list-modal.pug
+++ b/web/templates/street-view-list-modal.pug
@@ -13,3 +13,6 @@ div(uk-modal)
                         td= view.name
                         td
                             button.uk-button.uk-button-primary.uk-button-small(data-id=view.id) Open
+                else
+                    tr
+                        td.no-result(colspan="2") No result.
