add street view unbind from camera

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -8,5 +8,7 @@ block content
                     #tiledMap
             .uk-width-1-2
                 .uk-card.uk-card-default.uk-card-body.uk-padding-small
-                    h3.uk-card-title.uk-margin-small-bottom Street View
+                    .uk-position-small.uk-position-top-right.unbind-button
+                        a(uk-icon="icon:close")
+                    h3.uk-card-title.uk-margin-small Street View
                     #streetView
