--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -7,8 +7,19 @@ block content
                 .uk-card.uk-card-default
                     #tiledMap
             .uk-width-1-2
-                .uk-card.uk-card-default.uk-card-body.uk-padding-small
+                .uk-card.uk-card-default.uk-card-body.uk-padding-small.uk-margin-small-bottom
                     .uk-position-small.uk-position-top-right.unbind-button
                         a(uk-icon="icon:close")
                     h3.uk-card-title.uk-margin-small Street View
                     #streetView
+                .uk-card.uk-card-default.uk-padding-small
+                    .uk-card-body.uk-padding-remove-horizontal.uk-padding-remove-top.uk-padding-small
+                        div(uk-grid)
+                            .uk-width-1-2
+                                h5 Parking Lot @OSM
+                                #parkingLot_OSM.uk-text-small.uk-text-muted
+                            .uk-width-1-2
+                                h5 Parking Lot @Street View
+                                #parkingLot_StreetView.uk-text-small.uk-text-muted
+                    .uk-card-footer.uk-padding-remove-horizontal.uk-padding-remove-bottom
+                        button#submitBtn.uk-button.uk-button-primary.uk-button-small.uk-align-right(disabled) Submit
