add context path config

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,7 @@
 doctype html
 html
     head
+        base(href=context + "/")
         title Parking Lot Identification
     body
         block content
