--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -10,7 +10,7 @@ block content
                 .uk-card.uk-card-default.uk-card-body.uk-padding-small.uk-margin-small-bottom
                     .uk-position-small.uk-position-top-right.unbind-button
                         a(uk-icon="icon:close")
-                    h3.uk-card-title.uk-margin-small Street View
+                    h3.uk-card-title.uk-margin-small= __("Street View")
                     #streetView
                 .uk-card.uk-card-default.uk-padding-small
                     .uk-card-body.uk-padding-remove-horizontal.uk-padding-remove-top.uk-padding-small
