add navbar for development env

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    .uk-container.uk-margin-medium-top
+    .uk-container.uk-margin-medium-top.uk-margin-medium-bottom
         div(uk-grid)
             .uk-width-1-2
                 .uk-card.uk-card-default
