--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,8 +2,25 @@ doctype html
 html
     head
         base(href=context + "/")
-        title Parking Lot Identification
+        title= __("Parking Lot Editor")
     body
+        nav.uk-navbar-container(uk-navbar)
+            .uk-navbar-left
+                .uk-navbar-item
+                    h3.uk-margin-remove-bottom= __("Parking Lot Editor")
+            .uk-navbar-right
+                ul.uk-navbar-nav
+                    li
+                        a
+                            img(src="/images/en.png" width=24 height=24)
+                        .uk-navbar-dropdown.uk-width-auto.uk-padding-small.uk-margin-remove
+                            ul.uk-nav.uk-navbar-dropdown-nav
+                                li
+                                    a
+                                        img(src="/images/en.png" width=24 height=24)
+                                li
+                                    a
+                                        img(src="/images/zh_CN.png" width=24 height=24)
         block content
         if env == "development"
             script(src="/bundle.js")
