--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -18,6 +18,12 @@ block content
                     span.uk-margin-large-top.uk-margin-large-bottom(uk-icon="icon: link; ratio: 5")
                     .uk-overlay-panel.uk-overlay-bottom.uk-overlay-slide-bottom.uk-overlay-default
                         p.mapping-entry.uk-dark(data-i18n="edit-parking-lot-mapping")
+    #osm-section.uk-container
+        .uk-cover-container.uk-height-xlarge
+            iframe(src="#" width="100%" height="100%" frameborder="0")
+    #street-view-section.uk-container
+        .uk-cover-container.uk-height-xlarge
+            iframe(src="#" width="100%" height="100%" frameborder="0")
     #mapping-section.uk-container.uk-margin-medium-top.uk-margin-medium-bottom
         div(uk-grid)
             .uk-width-1-2
