--- a/web/css/style.css
+++ b/web/css/style.css
@@ -3,8 +3,55 @@ html {
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
 }
-#home-section, #osm-section, #street-view-section, #mapping-section {
+.uk-height-viewport {
+    height: 100vh;
+    min-height: 600px;
+}
+#wrapper-section, #home-section, #osm-section, #street-view-section, #mapping-section {
     display: none;
+}
+.wrapper {
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/wrapper.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+.wrapper-box {
+    padding-top: 150px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+}
+.wrapper-title {
+    line-height: 60px;
+    font-size: 60px;
+    font-weight: bold;
+    color: #FFFFFF;
+    letter-spacing: 1px;
+    text-shadow: 0px 0px 7px rgba(230,178,178,0.50);
+    text-transform: uppercase;
+}
+.wrapper-button {
+    cursor: pointer;
+    margin-top: 80px;
+    background: rgba(0,0,0,0.53);
+    border: 2px solid #FFFFFF;
+    font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+    font-size: 24px;
+    color: #FFFFFF;
+    letter-spacing: 2.79px;
+    text-transform: uppercase;
+    padding: 17px 39px 17px 53px;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+}
+.wrapper-button:hover {
+    background: #0f7ae5;
+    color: #fff;
 }
 #tiledMap {
     width: 100%;
